[package]
name = "hmt-frontend-toy"
description = "Parsing the Toy source code and generating the Cranelift IR"
version = "0.6.11"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
ariadne = { version = "0.5.1", features = ["auto-color"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
concolor = "0.1.1"
cranelift = { version = "0.125.3", features = ["module", "object"] }
lalrpop-util = "0.22.2"
logos = "0.15.1"
target-lexicon = "0.13.3"

[build-dependencies]
lalrpop = "0.22.2"
